cabal-version:      2.0
name:               network-multicast
version:            0.3.2
copyright:          2008-2019 Audrey Tang
license:            PublicDomain
license-file:       LICENSE
author:             Audrey Tang <audreyt@audreyt.org>
maintainer:         Marco Zocca
synopsis:           Simple multicast library
description:        The "Network.Multicast" module is for sending
                    UDP datagrams over multicast (class D) addresses.
stability:          experimental
build-type:         Simple
category:           Network
extra-source-files: examples/sender.hs examples/receiver.hs ChangeLog

flag examples
  description:
    Build executable examples.
  default:
    False
  manual:
    True

library
    default-extensions:         ForeignFunctionInterface, CPP, FlexibleInstances
    exposed-modules:    Network.Multicast
    build-depends:      base >= 4 && < 5, network, network-bsd
    hs-source-dirs:     src
    if os(win32)
        extra-libraries: ws2_32

executable receiver
  main-is: receiver.hs
  hs-source-dirs: examples
  default-language: Haskell2010
  if !flag(examples)
    buildable: False
  else
    build-depends: base, bytestring, network, network-multicast

executable sender
  main-is: sender.hs
  hs-source-dirs: examples
  default-language: Haskell2010
  if !flag(examples)
    buildable: False
  else
    build-depends: base, bytestring, network, network-multicast, time

source-repository head
  type:     git
  location: http://github.com/audreyt/network-multicast
